LU-11057 obd: check '-o network' and peer discovery conflict

"-o network=net" client mount option is not taken into account
when LNet dynamic peer discovery is active.
Check if LNet dynamic peer discovery is active on local node. If it
is, return error if "-o network=net" option is specified.

This patch will have to be reverted when the incompatibility between
"-o network=net" client mount option and LNet dynamic peer discovery
is resolved.

Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I0520e58b22b7adecf797fbd351506c2f8712dc85
Reviewed-on: https://review.whamcloud.com/32562
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Amir Shehata <ashehata@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>